# python-project-lvl4

./: .codeclimate.yml  .env.sample  .gitignore  Makefile  Procfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pyci.yml
task_manager/: mixins.py  settings.py  urls.py
task_manager/labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: label.json  labels.json
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/locale/uk/LC_MESSAGES/: django.mo  django.po
task_manager/pages/templates/pages/: base.html  home.html
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: status.json  statuses.json
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/tasks/: admin.py  filters.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: task.json  tasks.json  tasks_filtering.json
task_manager/tasks/migrations/: 0001_initial.py  0002_task_labels.py
task_manager/tasks/templates/tasks/: base.html  create.html  delete.html  detail.html  index.html  update.html
task_manager/users/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/users/fixtures/: one_user.json  user.json  users.json
tasks/: urls.py
(+6 files in other folders)
