[tool.poetry]
name = "python-project-lvl4"
version = "0.1.0"
description = ""
authors = ["Vitalii Paprotskyi <vetalpaprotsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.5"
django-bootstrap4 = "^2.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.2.1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
